# hostel-ai-env

./: Dockerfile  README.md  app.py  baseline.py  env.py  grader.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
server/: app.py
