[project]
name = "hostel-ai-env"
version = "0.1.0"
description = "Hostel AI Environment for complaint classification"
authors = [
    { name = "Umme Misbah Sikandar" },
    { name = "Iban Nadir Mondal" }
]

dependencies = [
    "fastapi",
    "uvicorn",
    "requests",
    "openenv"
]

[project.scripts]
server = "server.app:app"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"